# Bottles

./: .deepsource.toml  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .pylintrc  .travis.yml  AppImageBuilder.yml  AppRun  Bottles.kdev4  CHANGELOG  CODE_OF_CONDUCT.md  CODING_GUIDE.md  CONTACT.md  CONTRIBUTING.md  Dockerfile  PKGBUILD  README.md  README.tr.md  VERSION  VERSION_UPDATE.md  appimage-build.sh  build.sh  com.github.mirkobrombin.bottles  com.usebottles.bottles  com.usebottles.bottles.Devel.yml  com.usebottles.bottles.dev.json  com.usebottles.bottles.dev.yml  com.usebottles.bottles.elementary.json  com.usebottles.bottles.elementary.yml  com.usebottles.bottles.json  com.usebottles.bottles.pypi-deps.yaml  com.usebottles.bottles.src.yaml  com.usebottles.bottles.yml  eos_run.py  gamemode.patch  install.sh  ld.so.conf  meson.build  (+14 more)
bottles/: alert.py  constants.py  create.py  detail.py  headerbar.py  helper.py  importer.py  list.py  main.py  manage.py  meson.build  requirements.txt  stack.py  welcome.py  window.py  wine.py
bottles/backend/: bottle.py  cabextract.py  diff.py  downloader.py  globals.py  health.py  logger.py  meson.build  params.py  runner.py  state.py  typing.py
bottles/backend/dlls/: d8vk.py  dll.py  dxvk.py  latencyflex.py  meson.build  nvapi.py  vkd3d.py
bottles/backend/managers/: backup.py  btrfssubvolume.py  (+28 more)
bottles/frontend/: bottle-details-page.blp  bottle-details-view-subpage.blp  bottle-details-view.blp  bottle_details_page.py  bottle_details_view.py  bottle_picker_dialog.py  bottles-list-view.blp  bottles.gresource.xml  bottles.in  bottles.py  bottles_list_view.py  check-row.blp  cli.py  common.py  component-entry-row.blp  component_entry_row.py  const.py  crash_report_dialog.py  dependency_entry_row.py  details-dependencies-view.blp  details-installers-view.blp  details-preferences-page.blp  details-versioning-page.blp  details_dependencies_view.py  details_installers_view.py  details_preferences_page.py  details_task_manager_view.py  details_versioning_page.py  display_dialog.py  dll_overrides_dialog.py  duplicate_dialog.py  environment_variables_dialog.py  filters.py  fsr_dialog.py  gamescope-dialog.blp  gamescope_dialog.py  gtk.py  help-overlay.blp  importer-view.blp  importer_row.py  (+37 more)
bottles/fvs/: exceptions.py  meson.build  repo.py
bottles/tests/: conftest.py
data/: com.github.mirkobrombin.bottles.appdata.xml  com.github.mirkobrombin.bottles.desktop  com.usebottles.bottles.appdata.xml.in  com.usebottles.bottles.desktop  com.usebottles.bottles.desktop.in  com.usebottles.bottles.desktop.in.in  com.usebottles.bottles.gschema.xml  com.usebottles.bottles.metainfo.xml.in  com.usebottles.bottles.metainfo.xml.in.in  data.gresource.xml  data.gresource.xml.in  meson.build  pm.mirko.bottles.appdata.xml.in  pm.mirko.bottles.desktop.in  pm.mirko.bottles.gschema.xml  style.css
data/appstream/: 1.png.back  2.png.back  3.png.back  4.png.back  5.png.back  6.png.back
data/icons/: meson.build
data/mime/: com.usebottles.bottles.exe.xml  com.usebottles.bottles.xml
po/: LINGUAS  POTFILES  README.md  ar.po  az.po  be.po  bg.po  bn.po  bottles.pot  bs.po  ca.po  ckb.po  com.usebottles.bottles.pot  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  ga.po  gl.po  he.po  hi.po  hi.pot  hr.po  hu.po  id.po  ie.po  it.po  ja.po  ka.po  kab.po  ko.po  kw.po  (+26 more)
src/: add-details.ui  add.ui  bottles.gresource.xml  bottles.in  cli.in  constants.py  details.ui  download.py  empty.py  installer_manager.py  list-entry.ui  list.ui  main.py  meson.build  operation.py  params.py  runner.py  runner_backup.py  runner_globals.py  runner_utilities.py  runner_versioning.py  style.css  utils.py  window.py  window.ui
src/backend/: backup.py  bottle.py  cabextract.py  component.py  data.py  dependency.py  diff.py  display.py  dll.py  downloader.py  dxvk.py  globals.py  gpu.py  health.py  importer.py  installer.py  layers.py  logger.py  manager.py  manager_utils.py  meson.build  notifications.py  nvapi.py  register.py  runner.py  runtime.py  utilities.py  versioning.py  vkd3d.py  vulkan.py
src/devel/: const.py
src/dialogs/: bottlepicker.py  crash.py  depscheck.py  dlloverrides.py  drives.py  duplicate.py  envvars.py  envvars_old.py  exclusionpatterns.py  filechooser.py  gamescope.py  generic.py  installer.py  journal.py  launchoptions.py  localresources.py  meson.build  onboard.py  protonalert.py  rename.py  runargs.py  sandbox.py  upgradeversioning.py  vkbasalt.py  vmtouch.py
src/pages/: add.py  create.py  details.py  dialog.py  importer.py  list.py  meson.build  new.py  onboard.py  preferences.py  taskmanager.py
src/ui/: about.blp  about.ui  add-details.ui  add.ui  bottles.gresource.xml  breeze.css  component-entry.ui  create.ui  dashboard.ui  dependency-entry.blp  dependency-entry.ui  details-bottle.blp  details-bottle.ui  details-dependencies.blp  details-dependencies.ui  details-installers.blp  details-installers.ui  details-preferences.blp  details-preferences.ui  details-preferences.ui.bak  details-programs.blp  details-programs.ui  details-taskmanager.ui  details-versioning.blp  details-versioning.ui  details.ui  dialog-bottle-picker.blp  dialog-bottle-picker.ui  dialog-crash-report.blp  dialog-crash-report.ui  dialog-deps-check.blp  dialog-deps-check.ui  dialog-dll-overrides.ui  dialog-drives.blp  dialog-drives.ui  dialog-duplicate.ui  dialog-env-vars.blp  dialog-env-vars.ui  dialog-environment-variables.ui  dialog-flatpak-migration.ui  (+69 more)
src/utils/: common.py  connection.py  gtk.py  meson.build  threading.py
src/views/: bottle_dependencies.py  bottle_details.py  bottle_installers.py  bottle_preferences.py  bottle_programs.py  bottle_taskmanager.py  bottle_versioning.py  details.py  dialog.py  importer.py  library.py  list.py  loading.py  meson.build  new.py  onboard.py  preferences.py  taskmanager.py
src/widgets/: component.py  dependency.py  dxvk.py  executable.py  importer.py  installer.py  library.py  meson.build  message.py  nvapi.py  page.py  program.py  runner.py  state.py  vkd3d.py
(+505 files in other folders)
