pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())
gnome = import('gnome')
blueprints = custom_target('blueprints',
  input: files(
    'component-entry-row.blp',
    'check-row.blp',
    'dependency-entry-row.blp',
    'bottle-details-page.blp',
    'details-dependencies-view.blp',
    'details-installers-view.blp',
    'details-task-manager-view.blp',
    'details-versioning-page.blp',
    'bottle-details-view.blp',
    'bottle-picker-dialog.blp',
    'crash-report-dialog.blp',
    'dependencies-check-dialog.blp',
    'dll-overrides-dialog.blp',
    'drives-dialog.blp',
    'duplicate-dialog.blp',
    'dialog-env-vars.blp',
    'dialog-exclusion-patterns.blp',
    'dialog-gamescope.blp',
    'dialog-installer.blp',
    'dialog-journal.blp',
    'dialog-launch-options.blp',
    'dialog-proton-alert.blp',
    'dialog-rename.blp',
    'dialog-sandbox.blp',
    'dialog-upgrade-versioning.blp',
    'dialog-vkbasalt.blp',
    'display-dialog.blp',
    'dialog-vmtouch.blp',
    'dialog-fsr.blp',
    'dialog-mangohud.blp',
    'dll-override-entry.blp',
    'drive-entry.blp',
    'env-var-entry.blp',
    'exclusion-pattern-entry.blp',
    'importer-entry.blp',
    'importer.blp',
    'installer-entry.blp',
    'library-entry.blp',
    'library.blp',
    'bottle-row.blp',
    'list.blp',
    'loading.blp',
    'local-resource-entry.blp',
    'new-bottle-dialog.blp',
    'onboard.blp',
    'preferences.blp',
    'program-entry.blp',
    'state-entry.blp',
    'task-entry.blp',
    'window.blp',
    'details-preferences-page.blp',
    'help-overlay.blp',
  ),
  output: '.',
  command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],)

gnome.compile_resources('bottles',
  'bottles.gresource.xml',
  gresource_bundle: true,
  dependencies: blueprints,
  install: true,
  install_dir: pkgdatadir,
)
